feat(post): add support for multiple images in post feed API and update SonarQube health checks
- Enabled multiple image handling in post entity and API responses
- Updated controller/service logic for multi-image upload
- Improved SonarQube health check configuration and endpoints